--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
               <a class="nav-link" href="paginas/soporte.html">Soporte</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/paginas/contacto.html">Contacto</a>
+              <a class="nav-link" href="paginas/contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/paginas/login.html">Inicio de sesión</a>
+              <a class="nav-link" href="paginas/login.html">Inicio de sesión</a>
             </li>
           </ul>
           <form class="d-flex">
-             <a button class="btn btn-outline-primary ms-3" type="submit" href="/paginas/registro.html">Registrarse</a> 
+             <a button class="btn btn-outline-primary ms-3" type="submit" href="paginas/registro.html">Registrarse</a> 
             </button>
           </form>
         </div>
